fixed king detection issue, not sure if solution to failed fetch request works

--- a/src/css/game.css
+++ b/src/css/game.css
@@ -104,10 +104,11 @@
   margin-left: 15%;
   margin-right: 15%;
 }
-/* 
-.instructions {
+
+li {
   text-align: left;
-} */
+  margin: 10px 0;
+}
 
 .text {
   opacity: 0;
